<resources>
    <string name="app_name">FriedChickenRating</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_user_name">User name</string>
    <string name="nav_header_user_email">User email</string>
    <string name="action_settings">Settings</string>

    <string name="menu_signup">SignUp</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_favorites">My Favorites</string>
    <string name="menu_maps">Restaurants Map</string>
    <string name="menu_roulette">Roulette</string>
    <string name="menu_newRating">New Rating</string>
    <string name="menu_editRating">Edit Rating</string>
    <string name="menu_viewRating">View Rating</string>
    <string name="menu_ratings">Ratings</string>
    <string name="menu_newRecipe">New Recipe</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_editRecipes">Edit Recipe</string>
    <string name="menu_viewRecipe">View Recipe</string>

    <string name="error_invalid_email">Not a valid email</string>
    <string name="error_invalid_password">Password must be a valid min 6 characters</string>
    <string name="login_failed">"Login failed, please enter a valid email and password or sign up"</string>

    <string name="main_btn_log_out">Log out</string>
    <string name="signup_title">Sign Up</string>
    <string name="signup_name">Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_btn_sign_up">Sign Up</string>
    <string name="signup_btn_log_in">Log in</string>
    <string name="login_title">Log In</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_btn_log_in">Log in</string>
    <string name="login_btn_sign_up">Sign up</string>
    <string name="profile_title">User Profile</string>
    <string name="profile_welcome">Welcome</string>
    <string name="profile_welcome_message">Plase enter your hometown and preferences for chicken.</string>
    <string name="profile_image">User profile image</string>
    <string name="profile_taking_a_picture">Taking a picture</string>
    <string name="profile_choosing_a_picture">Choosing a picture</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_hometown">Hometown</string>
    <string name="profile_background_culture">Background culture</string>
    <string name="profile_my_preferences">My preferences about chicken by priority</string>
    <string name="profile_my_preferences_flavor">Flavor</string>
    <string name="profile_my_preferences_crunch">Crunch</string>
    <string name="profile_my_preferences_spiciness">Spiciness</string>
    <string name="profile_my_preferences_portion">Portion</string>
    <string name="profile_my_preferences_price">Price</string>
    <string name="profile_btn_save">Save</string>
    <string name="profile_btn_close">Close</string>
    <string name="profile_btn_delete_user">Delete User</string>
    <string name="profile_delete_account">Delete account</string>
    <string name="profile_email_confirm">Please enter email to confirm</string>
    <string name="home_welcome_message">Welcome to Fried Chicken Rater!</string>
    <string name="home_ratings">RATINGS</string>
    <string name="home_map">MAP</string>
    <string name="home_recipe">RECIPE</string>
    <string name="home_roulette">ROULETTE</string>
    <string name="home_profile">PROFILE</string>
    <string name="home_favorite">FAVORITE</string>
    <string name="new_rating_restaurant_name">Restaurant name</string>
    <string name="new_rating_region">Region: Burnaby</string>
    <string name="new_rating_chicken_type">Type: Korean, Japanese</string>
    <string name="new_rating_chicken_menu_title">Chicken menu title</string>
    <string name="new_rating_btn_done">Done</string>
    <string name="new_rating_ratings">Ratings</string>
    <string name="new_rating_flavor">Flavor</string>
    <string name="new_rating_crunch">Crunch</string>
    <string name="new_rating_spiciness">Spiciness</string>
    <string name="new_rating_portion">Portion</string>
    <string name="new_rating_price">Price</string>
    <string name="new_rating_overall_value">Overall Value</string>
    <string name="new_rating_other_items">Other Items</string>
    <string name="new_rating_side_menus">Side menus</string>
    <string name="new_rating_notes">Notes</string>
    <string name="new_rating_comments">Comments</string>
    <string name="new_rating_upload_a_image">Upload a image</string>
    <string name="new_rating_taking_a_picture">Taking a picture</string>
    <string name="new_rating_choosing_a_picture">Choosing a picture</string>
    <string name="new_rating_open_a_map">Open a map</string>
    <string name="new_rating_restaurant_name_sample_text">Pelican Chicken</string>
    <string name="new_rating_region_sample_text">Burnaby</string>
    <string name="new_rating_chicken_type_sample_text">Korean</string>
    <string name="new_rating_chicken_menu_title_sample_text">Spicy Chicken 15pcs</string>
    <string name="new_rating_side_menus_sample_text">Drinks, salads...</string>
    <string name="new_rating_notes_sample_text">Good...</string>
    <string name="rating_list_fried_chicken_image">Fried chicken image</string>
    <string name="rating_list_menu_title">Menu title</string>
    <string name="rating_list_restaurant_name">Restaurant name</string>
    <string name="rating_list_filters_latest">Latest</string>
    <string name="rating_list_filters_location">Location</string>
    <string name="rating_list_filters_high">High</string>
    <string name="rating_list_filters_relevant">Relevant</string>
    <string name="rating_list_filters_my">My</string>
    <string name="rating_list_filters_my_flavor">My Flavor</string>
    <string name="rating_list_filters_my_culture">My Culture</string>
    <string name="rating_list_filters_my_hometown">My Hometown</string>
    <string name="view_rating_menu_title_sample_text">Spicy Chicken 15pcs</string>
    <string name="view_rating_fried_chicken_image">Fried Chicken Image</string>
    <string name="view_rating_btn_edit">Edit</string>
    <string name="view_rating_btn_delete">Delete</string>
    <string name="view_rating_place_name_sample_text">Pelican Chicken</string>
    <string name="view_rating_open_a_map">Open a map</string>
    <string name="view_rating_region_sample_text">Burnaby</string>
    <string name="view_rating_chicken_type_sample_text">Korean</string>
    <string name="view_rating_favorite">Favorite</string>
    <string name="view_rating_ratings">Ratings</string>
    <string name="view_rating_share">Share</string>
    <string name="view_rating_ratings_flavor">Flavor</string>
    <string name="view_rating_ratings_crunch">Crunch</string>
    <string name="view_rating_ratings_spiciness">Spiciness</string>
    <string name="view_rating_ratings_portion">Portion</string>
    <string name="view_rating_ratings_price">Price</string>
    <string name="view_rating_ratings_overall_value">Overall Value</string>
    <string name="view_rating_other_items">Other Items</string>
    <string name="view_rating_other_items_sample_text">Other items...</string>
    <string name="view_rating_notes">Notes</string>
    <string name="view_rating_notes_sample_text">Notes...</string>
    <string name="view_rating_show_all">Show All Rating List of This Place</string>
    <string name="new_recipe_recipe_name">Recipe Name</string>
    <string name="new_recipe_upload_a_image">Upload a image</string>
    <string name="new_recipe_taking_a_picture">Taking a picture</string>
    <string name="new_recipe_choosing_a_picture">Choosing a picture</string>
    <string name="new_recipe_btn_done">Done</string>
    <string name="new_recipe_ingredients">Ingredients</string>
    <string name="new_recipe_ingredients_hint">Garlic 1 teaspoon, salt 1 teaspoon...</string>
    <string name="new_recipe_steps">Steps</string>
    <string name="new_recipe_steps_sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="recipes_list_image">Recipe image</string>
    <string name="recipes_list_menu_title">Recipe title</string>
    <string name="recipes_list_filters_latest">Latest</string>
    <string name="recipes_list_filters_ascending">Ascending</string>
    <string name="recipes_list_filters_descending">Descending</string>
    <string name="recipes_list_filters_my">My</string>
    <string name="recipes_list_btn_add_recipe">Add Recipe</string>
    <string name="view_recipe_title">Pelican\'s Spicy Chicken</string>
    <string name="view_recipe_picture">Recipe picture</string>
    <string name="view_recipe_btn_edit">Edit</string>
    <string name="view_recipe_btn_delete">Delete</string>
    <string name="view_recipe_ingredients">Ingredients</string>
    <string name="view_recipe_ingredients_sample_text">Garlic 1 teaspoon, salt 1 teaspoon...</string>
    <string name="view_recipe_steps">Steps</string>
    <string name="view_recipe_steps_sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="roulette_btn_spin">Spin</string>
    <string name="roulette_guid_message">Click Spin to Pick a Restaurant!</string>
    <string name="roulette_image">Roulette image</string>
    <string name="roulette_open_a_map">Open a map</string>
    <string name="roulette_spin_stick">Stick to stop spin</string>
    <string name="bottom_sheet_fried_chicken_picture">Fried Chicken Picture</string>
    <string name="bottom_sheet_menu_title">TextView</string>
    <string name="bottom_sheet_place_name">Place Name</string>
    <string name="bottom_sheet_place_region">Place Region</string>
    <string name="bottom_sheet_btn_new_rating">New Rating</string>
    <string name="favorite_fried_chicken_image">Fried chicken image</string>
    <string name="favorite_menu_title">Menu title</string>
    <string name="favorite_restaurant_name">Restaurant name</string>
</resources>