<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/menu_my_favorites" />
        <item
            android:id="@+id/nav_my_ratings"
            android:icon="@drawable/ic_menu_ratings"
            android:title="@string/menu_my_ratings" />
        <item
            android:id="@+id/nav_my_recipes"
            android:icon="@drawable/ic_menu_recipes"
            android:title="@string/menu_my_recipes" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_maps"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_roulette"
            android:icon="@drawable/ic_menu_roulette"
            android:title="@string/menu_roulette" />
        <item
            android:id="@+id/nav_ratings"
            android:icon="@drawable/ic_menu_ratings"
            android:title="@string/menu_ratings" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_menu_recipes"
            android:title="@string/menu_recipes" />
    </group>
</menu>