<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ratings.RatingListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSortLatest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/rating_list_filters_latest"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnSortLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/rating_list_filters_location"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnSortHighRates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/rating_list_filters_high"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnSortRelevant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/rating_list_filters_relevant"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnSortMyRates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/rating_list_filters_my"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnSortMyFlavor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/rating_list_filters_my_flavor"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnSortMyCulture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/rating_list_filters_my_culture"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnSortMyHometown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/rating_list_filters_my_hometown"
                    android:textSize="10sp" />

                <ImageView
                    android:id="@+id/btnOpenMap"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/home_map" />

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRatingList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>