<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="10dp">

            <TextView
                android:id="@+id/viewRatingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/view_rating_menu_title_sample_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="80dp"
                    app:cardCornerRadius="4dp" >

                <ImageView
                    android:id="@+id/imgViewPicture"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.05"
                    android:scaleType="center"
                    android:contentDescription="@string/view_rating_fried_chicken_image"
                    tools:src="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnEditRating"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="2dp"
                        android:text="@string/view_rating_btn_edit"
                        android:textSize="11sp"
                        app:cornerRadius="@dimen/button_corner_radius" />

                    <Button
                        android:id="@+id/btnDeleteRating"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="2dp"
                        android:text="@string/view_rating_btn_delete"
                        android:textSize="11sp"
                        app:cornerRadius="@dimen/button_corner_radius" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/viewRatingPlaceName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingLeft="60dp"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="@string/view_rating_place_name_sample_text" />

                    <ImageView
                        android:id="@+id/btnOpenMap"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/view_rating_open_a_map"
                        android:src="@drawable/home_map" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/viewRatingRegion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingLeft="60dp"
                            android:textSize="16sp"
                            tools:text="@string/view_rating_region_sample_text" />

                        <TextView
                            android:id="@+id/viewRatingChickenType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingLeft="60dp"
                            android:textSize="16sp"
                            tools:text="@string/view_rating_chicken_type_sample_text" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/btnMyFavorite"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/view_rating_favorite"
                        android:src="@drawable/ic_icon_favorite" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/view_rating_ratings"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/btnShare"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/view_rating_share"
                        android:src="@drawable/ic_icon_share" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/view_rating_ratings_flavor" />

                    <RatingBar
                        android:id="@+id/ratingBarFlavor"
                        style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                        android:layout_width="180dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:clickable="false"
                        android:isIndicator="true"
                        android:numStars="5"
                        tools:ignore="SpeakableTextPresentCheck"></RatingBar>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/view_rating_ratings_crunch" />

                    <RatingBar
                        android:id="@+id/ratingBarCrunch"
                        style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                        android:layout_width="180dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:clickable="false"
                        android:isIndicator="true"
                        android:numStars="5"
                        tools:ignore="SpeakableTextPresentCheck"></RatingBar>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/view_rating_ratings_spiciness" />

                    <RatingBar
                        android:id="@+id/ratingBarSpiciness"
                        style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                        android:layout_width="180dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:clickable="false"
                        android:isIndicator="true"
                        android:numStars="5"
                        tools:ignore="SpeakableTextPresentCheck"></RatingBar>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/view_rating_ratings_portion" />

                    <RatingBar
                        android:id="@+id/ratingBarPortion"
                        style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                        android:layout_width="180dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:clickable="false"
                        android:isIndicator="true"
                        android:numStars="5"
                        tools:ignore="SpeakableTextPresentCheck"></RatingBar>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/view_rating_ratings_price" />

                    <RatingBar
                        android:id="@+id/ratingBarPrice"
                        style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                        android:layout_width="180dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:clickable="false"
                        android:isIndicator="true"
                        android:numStars="5"
                        tools:ignore="SpeakableTextPresentCheck"></RatingBar>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/view_rating_ratings_overall_value" />

                    <RatingBar
                        android:id="@+id/ratingBarOverall"
                        style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                        android:layout_width="180dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:clickable="false"
                        android:isIndicator="true"
                        android:numStars="5"
                        tools:ignore="SpeakableTextPresentCheck"></RatingBar>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="0.1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_rating_other_items"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/viewRatingOtherItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:ems="10"
                    android:paddingLeft="12dp"
                    tools:text="@string/view_rating_other_items_sample_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="0.2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_rating_notes"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/viewRatingNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:paddingLeft="16dp"
                    android:text="@string/view_rating_notes_sample_text" />
            </LinearLayout>

            <Button
                android:id="@+id/btnShowAllRatingList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/view_rating_show_all" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>